# wecom-reader

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
docs/: wal-format-notes.md
tests/: smoke_message.py  test_image_resolver.py  test_message.py  test_message_mentions.py  test_reader.py  test_web_image.py
wecom_reader/: __init__.py  cli.py  image_resolver.py  reader.py  web.py
wecom_reader/crypto/: __init__.py  decrypt.py  key_extract.py
wecom_reader/db/: __init__.py  contact.py  message.py  session.py
wecom_reader/export/: __init__.py
wecom_reader/mcp/: __init__.py
wecom_reader/parser/: __init__.py
