[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wecom-reader"
version = "0.1.0"
description = "Agent-reusable tool for reading WeCom (企业微信) local chat history"
requires-python = ">=3.10"
dependencies = [
    "pycryptodomex>=3.20",
    "click>=8.0",
    "flask>=3.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
rich = ["rich>=13.0"]
all = ["mcp>=1.0", "rich>=13.0"]

[project.scripts]
wecom-reader = "wecom_reader.cli:main"

[tool.ruff]
extend-exclude = [
    "wecom_reader/cli.py",
    "wecom_reader/crypto/key_extract.py",
    "wecom_reader/db/contact.py",
    "wecom_reader/db/session.py",
]

[tool.setuptools.packages.find]
include = ["wecom_reader*"]

# -----------------------------------------------------------------------------
# Dev / test dependencies (PEP 735 dependency-groups, supported by pip 25+,
# uv, and pip-tools; GH Actions installs via `pip install --group dev`).
# -----------------------------------------------------------------------------
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
